# MGS

./: .clang-format  .ctagsignore  .dockerignore  .gitignore  .lvimrc  .travis.yml  .vimrc  .ycm_extra_conf.py  BUILD.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.build_ppc64le  Dockerfile.init  README  README.md  build_mgs  build_script  build_script.orig  copyright.sh  cvapp.sh  distNTS.sh  docker.build  docker.run  get_bison.sh  get_cuda.sh  get_flex.sh  get_mpich.sh  get_ompi.sh  get_suitesparse.sh  log.csv  make_both  make_mgs  make_nts  set_env  setenv_both  setenv_mgs  setenv_nts  unset_env
.github/: issue_template.md
NVUUtil/binToVtu/: CMakeLists.txt  RunConvertBinToVtu.bash
NVUUtil/binToVtu/src/: bin_to_vtu.cxx  timer.h
claude/: build-environment.md  extended-framework-summary.md  project-plan-1.1-Pytorch-GSL-MDL-conversion.md  simulation-framework-summary.md
common/: Makefile
doc/: Requirement_design_predicates
graphs/: Topology.h
gsl/: Extensions.mk  README  build_gsl  clean  clean.sh  configure.py  configure_njit.py  configure_ucnz.py
mdl/: Makefile  sources.mk
models/: DNN.mdf  Extensions.mk  NVU.mdf  UC.mdf  all.mdf  compartmental.mdf  define  gpu.mdf  ibex.mdf  mgs.mdf  ngs.mdf  njit.mdf  nts.mdf  ntsnvu.mdf
nti/: AllInTouchSpace.h  BG_AvailableMemory.h  Block.h  BoundingCuboid.cxx  BoundingSurfaceMesh.cxx  Branch.cxx  Branch.h  BuffFactor.h  Capsule.cxx  Capsule.h  Communicator.h  CompartmentKey.h  ComputeBranch.h  Decomposition.h  DendriteTouchSpace.cxx  Director.h  For.h  FrontLimitedSegmentSpace.cxx  Makefile  (+59 more)
(+26897 files in other folders)
